--- a/gapic-generator-java/src/main/java/com/google/api/generator/gapic/BUILD.bazel
+++ b/gapic-generator-java/src/main/java/com/google/api/generator/gapic/BUILD.bazel
@@ -7,8 +7,13 @@ filegroup(
     srcs = glob(["*.java"]) + [
         "//src/main/java/com/google/api/generator/gapic/composer:composer_files",
         "//src/main/java/com/google/api/generator/gapic/composer/comment:comment_files",
+        "//src/main/java/com/google/api/generator/gapic/composer/defaultvalue:defaultvalue_files",
+        "//src/main/java/com/google/api/generator/gapic/composer/grpc:grpc_files",
+        "//src/main/java/com/google/api/generator/gapic/composer/resourcename:resourcename_files",
+        "//src/main/java/com/google/api/generator/gapic/composer/rest:rest_files",
         "//src/main/java/com/google/api/generator/gapic/composer/samplecode:samplecode_files",
         "//src/main/java/com/google/api/generator/gapic/composer/store:store_files",
+        "//src/main/java/com/google/api/generator/gapic/composer/utils:utils_files",
         "//src/main/java/com/google/api/generator/gapic/model:model_files",
         "//src/main/java/com/google/api/generator/gapic/protoparser:protoparser_files",
         "//src/main/java/com/google/api/generator/gapic/protowriter:protowriter_files",
