--- a/gapic-generator-java/src/test/java/com/google/api/generator/gapic/composer/grpc/BUILD.bazel
+++ b/gapic-generator-java/src/test/java/com/google/api/generator/gapic/composer/grpc/BUILD.bazel
@@ -47,15 +47,8 @@ TEST_DEPS = [
 ]
 
 filegroup(
-    name = "composer_files",
+    name = "grpc_files",
     srcs = glob(["*.java"]),
-)
-
-java_proto_library(
-    name = "pubsub_java_proto",
-    deps = [
-        "@com_google_googleapis//google/pubsub/v1:pubsub_proto",
-    ],
 )
 
 java_proto_library(
