--- a/BUILD.bazel
+++ b/BUILD.bazel
@@ -8,6 +8,7 @@ load(
 package(default_visibility = ["//visibility:public"])
 
 JAVA_SRCS = [
+    "//src/main/java/com/google/api/generator/debug:debug_files",
     "//src/main/java/com/google/api/generator:generator_files",
     "//src/main/java/com/google/api/generator/engine:engine_files",
     "//src/main/java/com/google/api/generator/gapic:gapic_files",
@@ -53,6 +54,16 @@ java_binary(
 # directly (instead of relying on protoc to start the process), which would give
 # much greater flexibility in terms of debugging features, like attaching a
 # debugger, easier work with stdout and stderr etc.
+#
+# Usage example, via the rule in a corresponding BUILD.bazel file:
+#
+# load("@gapic_generator_java//rules_java_gapic:java_gapic.bzl", "java_generator_request_dump")
+# java_generator_request_dump(
+#     name = "compute_small_request_dump",
+#     srcs = [":compute_small_proto_with_info"],
+#     transport = "rest",
+# )
+#
 java_binary(
     name = "protoc-gen-code_generator_request_dumper",
     main_class = "com.google.api.generator.debug.CodeGeneratorRequestDumper",
@@ -69,9 +80,14 @@ java_binary(
 
 # A binary similar to protoc-gen-java_gapic but reads the CodeGeneratorRequest
 # directly from a file instead of relying on protoc to pipe it in.
+#
+# Usage example:
+#
+# bazel run code_generator_request_file_to_gapic_main desc-dump.bin dump.jar
+#
 java_binary(
-    name = "protoc-gen-java_gapic_from_file",
-    main_class = "com.google.api.generator.debug.MainStandalone",
+    name = "code_generator_request_file_to_gapic_main",
+    main_class = "com.google.api.generator.debug.CodeGeneratorRequestFileToGapicMain",
     runtime_deps = [
         "//src/main/java/com/google/api/generator",
         "//src/main/java/com/google/api/generator/debug",
