--- a/gapic-generator-java/src/test/java/com/google/api/generator/gapic/composer/common/BUILD.bazel
+++ b/gapic-generator-java/src/test/java/com/google/api/generator/gapic/composer/common/BUILD.bazel
@@ -29,6 +29,7 @@ TEST_DEPS = [
     "//src/main/java/com/google/api/generator/gapic/protoparser",
     "//src/main/java/com/google/api/generator/gapic/composer/defaultvalue",
     "//src/test/java/com/google/api/generator/gapic/testdata:deprecated_service_java_proto",
+    "//src/test/java/com/google/api/generator/gapic/testdata:bookshop_java_proto",
     "//src/test/java/com/google/api/generator/gapic/testdata:showcase_java_proto",
     "//src/test/java/com/google/api/generator/gapic/testdata:testgapic_java_proto",
     "@com_google_api_api_common//jar",
