--- a/gapic-generator-java/src/test/java/com/google/api/generator/gapic/protoparser/BUILD.bazel
+++ b/gapic-generator-java/src/test/java/com/google/api/generator/gapic/protoparser/BUILD.bazel
@@ -41,6 +41,7 @@ filegroup(
         "//src/main/java/com/google/api/generator/gapic/model",
         "//src/main/java/com/google/api/generator/gapic/protoparser",
         "//src/main/java/com/google/api/generator/gapic/utils",
+        "//src/test/java/com/google/api/generator/gapic/testdata:bookshop_java_proto",
         "//src/test/java/com/google/api/generator/gapic/testdata:showcase_java_proto",
         "//src/test/java/com/google/api/generator/gapic/testdata:testgapic_java_proto",
         "@com_google_api_api_common//jar",
