fix: Fix PathTemplate custom verb logic matching and instantiating (#244)
The custom verb (":literal" at the end of a url path) was not handled properly. On instantiation `:` was incorrectly replaced with `/`. On matching `:literal` was not properly recognized as a valid input.

--- a/api-common-java/build.gradle
+++ b/api-common-java/build.gradle
@@ -32,6 +32,10 @@ project.version = "1.10.5-SNAPSHOT" // {x-version-update:api-common:current}
 sourceCompatibility = 1.7
 targetCompatibility = 1.7
 
+jacoco {
+    toolVersion = "0.8.7"
+}
+
 // Dependencies
 // ------------
 
