--- a/src/main/java/com/google/api/generator/gapic/composer/rest/BUILD.bazel
+++ b/src/main/java/com/google/api/generator/gapic/composer/rest/BUILD.bazel
@@ -17,8 +17,8 @@ java_library(
         "//src/main/java/com/google/api/generator/engine/ast",
         "//src/main/java/com/google/api/generator/engine/writer",
         "//src/main/java/com/google/api/generator/gapic:status_java_proto",
-        "//src/main/java/com/google/api/generator/gapic/composer/common",
         "//src/main/java/com/google/api/generator/gapic/composer/comment",
+        "//src/main/java/com/google/api/generator/gapic/composer/common",
         "//src/main/java/com/google/api/generator/gapic/composer/defaultvalue",
         "//src/main/java/com/google/api/generator/gapic/composer/resourcename",
         "//src/main/java/com/google/api/generator/gapic/composer/samplecode",
@@ -28,7 +28,7 @@ java_library(
         "//src/main/java/com/google/api/generator/gapic/utils",
         "//src/main/java/com/google/api/generator/util",
         "@com_google_api_api_common//jar",
-        "@com_google_api_gax_java//gax:gax",
+        "@com_google_api_gax_java//gax",
         "@com_google_api_gax_java//gax:gax_testlib",
         "@com_google_api_gax_java//gax-httpjson:gax_httpjson",
         "@com_google_api_gax_java//gax-httpjson:gax_httpjson_testlib",
