build: configure branch java7 as a release branch (#254)

--- a/api-common-java/.github/sync-repo-settings.yaml
+++ b/api-common-java/.github/sync-repo-settings.yaml
@@ -20,6 +20,15 @@ branchProtectionRules:
     requiredApprovingReviewCount: 1
     requiresCodeOwnerReviews: true
     requiresStrictStatusChecks: true
+  - pattern: java7
+    isAdminEnforced: true
+    requiredStatusCheckContexts:
+      - units
+      - format
+      - cla/google
+    requiredApprovingReviewCount: 1
+    requiresCodeOwnerReviews: true
+    requiresStrictStatusChecks: true
 permissionRules:
   - team: Googlers
     permission: pull
