--- a/api-common-java/.github/release-please.yml
+++ b/api-common-java/.github/release-please.yml
@@ -6,3 +6,7 @@ branches:
     bumpMinorPreMajor: true
     branch: 1.10.1-sp
     handleGHRelease: true
+  - bumpMinorPreMajor: true
+    handleGHRelease: true
+    releaseType: java-yoshi
+    branch: java7
