--- a/api-common-java/gradle/wrapper/gradle-wrapper.properties
+++ b/api-common-java/gradle/wrapper/gradle-wrapper.properties
@@ -1,6 +1,6 @@
-#Tue Sep 20 10:02:51 PDT 2016
 distributionBase=GRADLE_USER_HOME
 distributionPath=wrapper/dists
+# pinning this at 6.9.1 because gradle-7.0 and above do not support the necessary groovy imports.
+distributionUrl=https\://services.gradle.org/distributions/gradle-6.9.1-bin.zip
 zipStoreBase=GRADLE_USER_HOME
 zipStorePath=wrapper/dists
-distributionUrl=https\://services.gradle.org/distributions/gradle-4.10.3-all.zip
