--- a/gax-java/gax-grpc/build.gradle
+++ b/gax-java/gax-grpc/build.gradle
@@ -4,7 +4,7 @@ archivesBaseName = "gax-grpc"
 project.version = "2.5.1-SNAPSHOT" // {x-version-update:gax-grpc:current}
 
 dependencies {
-  compile project(':gax'),
+  implementation( project(':gax'),
     libraries['maven.io_grpc_grpc_stub'],
     libraries['maven.io_grpc_grpc_auth'],
     libraries['maven.io_grpc_grpc_protobuf'],
@@ -16,15 +16,15 @@ dependencies {
     libraries['maven.com_google_api_grpc_proto_google_common_protos'],
     libraries['maven.com_google_api_api_common'],
     libraries['maven.io_grpc_grpc_netty_shaded'],
-    libraries['maven.io_grpc_grpc_alts']
+    libraries['maven.io_grpc_grpc_alts'])
 
   compileOnly libraries['maven.com_google_auto_value_auto_value']
 
-  testCompile project(':gax').sourceSets.test.output,
+  testImplementation( project(':gax').sourceSets.test.output,
     libraries['maven.junit_junit'],
     libraries['maven.org_mockito_mockito_core'],
     libraries['maven.com_google_truth_truth'],
-    libraries['maven.com_google_api_grpc_grpc_google_common_protos']
+    libraries['maven.com_google_api_grpc_grpc_google_common_protos'])
 
   annotationProcessor libraries['maven.com_google_auto_value_auto_value']
 
