feat: next release from main branch is 2.7.0 (#1530)
enable releases

--- a/gax-java/.github/release-please.yml
+++ b/gax-java/.github/release-please.yml
@@ -12,3 +12,7 @@ branches:
     handleGHRelease: true
     releaseType: java-yoshi
     branch: java7
+  - releaseType: java-backport
+    bumpMinorPreMajor: true
+    handleGHRelease: true
+    branch: 2.6.x
