--- a/gax-java/.github/sync-repo-settings.yaml
+++ b/gax-java/.github/sync-repo-settings.yaml
@@ -51,6 +51,16 @@ branchProtectionRules:
       - units (8)
       - units (11)
       - cla/google
+  - pattern: 2.6.x
+    isAdminEnforced: true
+    requiredApprovingReviewCount: 1
+    requiresCodeOwnerReviews: true
+    requiresStrictStatusChecks: true
+    requiredStatusCheckContexts:
+      - bazel
+      - units (8)
+      - units (11)
+      - cla/google
 permissionRules:
   - team: yoshi-admins
     permission: admin
