build: remove obsolete plugin and migrate Eclipse setup (#1545)
* build: remove obsolete plugin and migrate
* clean up

--- a/gax-java/gax-httpjson/build.gradle
+++ b/gax-java/gax-httpjson/build.gradle
@@ -1,4 +1,4 @@
-archivesBaseName = "gax-httpjson"
+archivesBaseName = 'gax-httpjson'
 
 // TODO: Populate this from dependencies.properties version property (for proper Gradle-Bazel sync)
 project.version = "0.91.1-SNAPSHOT" // {x-version-update:gax-httpjson:current}
