--- a/gax-java/gax-grpc/build.gradle
+++ b/gax-java/gax-grpc/build.gradle
@@ -1,4 +1,4 @@
-archivesBaseName = "gax-grpc"
+archivesBaseName = 'gax-grpc'
 
 // TODO: Populate this from dependencies.properties version property (for proper Gradle-Bazel sync)
 project.version = "2.6.1-SNAPSHOT" // {x-version-update:gax-grpc:current}
