fix: Use parent type instead of child_type in method doc sample
Fixes: #852.

--- a/src/test/java/com/google/api/generator/gapic/testdata/BUILD.bazel
+++ b/src/test/java/com/google/api/generator/gapic/testdata/BUILD.bazel
@@ -50,6 +50,7 @@ proto_library(
         "echo.proto",
         "identity.proto",
         "testing.proto",
+        "datastream.proto",
     ],
     deps = [
         "@com_google_googleapis//google/api:annotations_proto",
