Add messaging.proto instread of datastream

--- a/src/test/java/com/google/api/generator/gapic/testdata/BUILD.bazel
+++ b/src/test/java/com/google/api/generator/gapic/testdata/BUILD.bazel
@@ -50,7 +50,7 @@ proto_library(
         "echo.proto",
         "identity.proto",
         "testing.proto",
-        "datastream.proto",
+        "messaging.proto",
     ],
     deps = [
         "@com_google_googleapis//google/api:annotations_proto",
