deps: update grpc to 1.42.1 (#1559)
* deps: update grpc to 1.42.1

* test: print bazel version

* deps: update protobuf version to 3.19.1

* test: try googleapis container gcr.io/gapic-images/googleapis:latest

* test: try using no container

* chore: clarified comment on not using container in Bazel build

Co-authored-by: Tomo Suzuki <suztomo@google.com>

--- a/gax-java/.github/workflows/ci.yaml
+++ b/gax-java/.github/workflows/ci.yaml
@@ -22,7 +22,9 @@ jobs:
 
   bazel:
     runs-on: ubuntu-latest
-    container: gcr.io/gapic-images/googleapis-bazel:20210105
+    # Not using a container. The ubuntu-latest has Bazel 4.2 installed as of
+    # November 2021. gRPC 1.42 requires Bazel 4.
+    # https://github.com/grpc/grpc-java/pull/7598
     steps:
       - uses: actions/checkout@v2
       - uses: actions/setup-java@v1
