--- a/src/test/java/com/google/api/generator/gapic/composer/samplecode/BUILD.bazel
+++ b/src/test/java/com/google/api/generator/gapic/composer/samplecode/BUILD.bazel
@@ -8,6 +8,7 @@ TESTS = [
     "ServiceClientSampleCodeComposerTest",
     "SettingsSampleCodeComposerTest",
     "ExecutableSampleComposerTest",
+    "SampleUtilTest",
 ]
 
 filegroup(
