#869. A basic end-to-end solution. - Add unit tests for RoutingRuleParser

--- a/src/test/java/com/google/api/generator/gapic/testdata/BUILD.bazel
+++ b/src/test/java/com/google/api/generator/gapic/testdata/BUILD.bazel
@@ -51,6 +51,7 @@ proto_library(
         "identity.proto",
         "testing.proto",
         "messaging.proto",
+        "routing_rule_parser_testing.proto",
     ],
     deps = [
         "@com_google_googleapis//google/api:annotations_proto",
